# kafka-chaos-experiments

./: .gitignore  Makefile  README.md
.github/workflows/: build-and-push.yml  chaos-build-and-push.yml
aws/: create-iam-service-account.sh  msk-policy.json
code/: docker-compose.yml
code/detective-pikachu/: Dockerfile  README.md  pyproject.toml  requirements.txt
code/detective-pikachu/app/: config.py  main.py
code/order-reversed/: Dockerfile  README.md  pyproject.toml  requirements.txt
code/order-reversed/app/: config.py  main.py
code/order-updater/: Dockerfile  README.md  pyproject.toml  requirements.txt
code/order-updater/app/: main.py
code/poke-order-api/: Dockerfile  README.md  alembic.ini  migrate.py  pyproject.toml  requeriments.txt  requirements.txt  start.sh
code/poke-order-api/alembic/: env.py
code/poke-order-api/alembic/versions/: 245615355322_initial_migrations.py  6b0370ef65b6_initial_migration.py
code/poke-order-api/app/: config.py  crud.py  database.py  dependencies.py  kafka_producer.py  main.py  models.py  schemas.py  views.py
code/poke-order-api/app/routers/: orders.py
code/poke-order-api/templates/: create_order.html  list_orders.html  order_created.html
code/poke-syntethic-load/: countries.txt  main.py
code/poke-synthetic-load/: Dockerfile  config.py  main.py
experiments/: Dockerfile  corrupt_kafka_messages.yaml  reboot_msk_broker.yaml  requirements.txt
manifests/: detective-pikachu.yaml  kafka-chaos-experiments.yaml  order-reversed.yaml  order-updater.yaml  poke-order-api.yaml
workflows/: create_kafka_topics.yaml  kafka-topics-workflow.yaml  synthetic-load-test-users.yaml
