[project]
name = "order-updater"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jorge Tapicha", email = "jitapichab@gmail.com"},
]

dependencies = [
    "confluent-kafka>=2.5.0",
    "apscheduler>=3.10.4",
    "yunopyutils>=1.0.0a2",
    "requests>=2.32.3",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
exp = {cmd = "pdm export -f requirements -o requirements.txt --without-hashes --no-extras  --no-markers --prod", help = "Generate requirements file"}
main = {cmd = "python app/main.py", help = "Run the main application"}
